vzense-sys/vzense/include/Vzense_api_560.h

/**
* @brief 		Starts capturing the image stream indicated by <code>device</code>. \n
Invoke Ps2_StopStream() to stop capturing the image stream.
* @param[in] 	device			The handle of the device on which to start capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that start 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that start only 1 tof stream.						
* @return 	    ::PsRetOK if	the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StartStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Stops capturing the image stream on the device specified by <code>device</code>. that was started using Ps2_StartStream.
* @param[in] 	device			The handle of the device on which to stop capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that stop 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that stop only 1 tof stream.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StopStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Captures the next image frame from the device specified by <code>device</code>. This API must be invoked before capturing frame data using PsGetFrame().
* @param[in] 	device			The handle of the device on which to read the next frame.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	pFrameReady		Pointer to a buffer in which to store the signal on which image is ready to be get.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_ReadNextFrame(PsDeviceHandle device, uint32_t sessionIndex, PsFrameReady* pFrameReady);
/**
* @brief 		Returns the image data for the current frame from the device specified by <code>device</code>.\n
Before invoking this API, invoke PsReadNextFrame() to capture one image frame from the device.
* @param[in] 	device			The handle of the device to capture an image frame from.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	frameType		The image frame type.
* @param[out]	pPsFrame		Pointer to a buffer in which to store the returned image data.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetFrame(PsDeviceHandle device, uint32_t sessionIndex, PsFrameType frameType, PsFrame* pPsFrame);
/**
* @brief  		Sets the output data mode for the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device for which to set the data mode.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	dataMode		The output data mode. See ::PsDataMode for more information.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetDataMode(PsDeviceHandle device, uint32_t sessionIndex, PsDataMode dataMode);
/**
* @brief  		Returns the output data mode from the device specified by <code>device</code>.
* @param[in]	device			The handle of the device for which to set the data mode.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[Out]	dataMode		The output data mode. See ::PsDataMode for more information.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDataMode(PsDeviceHandle device, uint32_t sessionIndex, PsDataMode* dataMode);
/**
* @brief 		Returns the depth range mode from the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device from which to get the depth range.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	pDepthRange		Pointer to a ::PsDepthRange variable in which to store the returned depth range mode.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDepthRange(PsDeviceHandle device, uint32_t sessionIndex, PsDepthRange* pDepthRange);
/**
* @brief 		Sets the depth range mode for the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device on which to set the depth range.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	depthRange 		Specifies the depth range mode.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetDepthRange(PsDeviceHandle device, uint32_t sessionIndex, PsDepthRange depthRange);
/**
* @brief 		Returns the threshold value for the background filter from the device specified by <code>device</code>. \n
The value represents the cut-off point for distant data that the filter should ignore. \n
For example, if 20.0 is specified, data with 20% or less confidence will be dropped.
* @param[in] 	device			The handle of the device from which to get the threshold. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out] 	pThreshold 		Pointer to a 16-bit unsigned integer variable in which to return the threshold value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetThreshold(PsDeviceHandle device, uint32_t sessionIndex, uint16_t* pThreshold);
/**
* @brief 		Sets the threshold value for the background filter for the device specified by <code>device</code>. \n
The value represents the cut-off point for distant data that the filter should ignore.  \n
For example, if 20.0 is specified, data with 20% or less confidence will be dropped.
* @param[in] 	device			The handle of the device on which to set the threshold. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	threshold		The threshold value to set. 0 will attempt to keep all point data but may not be accurate further away; 100 or higher will reject almost all point data leaving only the closest points.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetThreshold(PsDeviceHandle device, uint32_t sessionIndex, uint16_t threshold);
/**
* @brief 		Returns the pulse count from the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device on which to set the pulse count. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out] 	pPulseCount		Pointer to a 16-bit unsigned integer variable in which to store the pulse count value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetPulseCount(PsDeviceHandle device, uint32_t sessionIndex, uint16_t* pPulseCount);
/**
* @brief 		Sets the pulse count for the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device on which to set the pulse count. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	pulseCount 		The pulse count value to set.For the range 3 and 4,the value is in the range [0,260],for the other range,the value is in the range [0,600].
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetPulseCount(PsDeviceHandle device, uint32_t sessionIndex, uint16_t pulseCount);
/**
* @brief 		Returns the the device's GMM gain.
* @param[in]	device			The handle of the device from which to get the GMM gain.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out] 	gmmgain 		Pointer to a variable in which to store the returned GMM gain.
* @return		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetGMMGain(PsDeviceHandle device, uint32_t sessionIndex, uint16_t* gmmgain);
/**
* @brief 		Sets the device GMM gain on a device.
* @param[in]	device			The handle of the device on which to set the GMM gain.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	gmmgain			The GMM gain value to set. See ::PsGMMGain for more information.The GMM gain value is in the range [0,4095].
* @return		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetGMMGain(PsDeviceHandle device, uint32_t sessionIndex, PsGMMGain gmmgain);
/**
* @brief 		Returns a specific property value from the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device from which to get the property value. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	propertyType	The type of property to get from the device. See ::PsPropertyType for more information.
* @param[out]	pData			Pointer to a buffer to store the returned property value.
* @param[out]	pDataSize		The size, in bytes, of the property value returned in <code>pData</code>.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetProperty(PsDeviceHandle device, uint32_t sessionIndex, int32_t propertyType, void* pData, int32_t* pDataSize);